--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -5,6 +5,7 @@
   <li><a class="collapsible-header waves-effect waves-blue" [routerLink]="'/drafts'">Experimental Drafts</a></li>
   <!-- <li><a [routerLink]="'/reviews/ready-to-review'">Ready to Review</a></li>-->
   <li><a class="collapsible-header waves-effect waves-blue" [routerLink]="'/reviews'">Review Requests</a></li>
+  <li><a class="collapsible-header waves-effect waves-blue" [routerLink]="'/usability'">Usability Evaluation</a></li>
   <li><a class="collapsible-header waves-effect waves-blue" [routerLink]="'/profile'">Profile</a></li>
   <li><a class="collapsible-header waves-effect waves-blue" [routerLink]="'/references'">References</a></li>
   <li><div class="divider"></div></li>
